# PyTorchTutorial

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  main.py  requirements.txt  run_container.sh  setup.py
3D_CNN/: index.ipynb
CBAM/: convolutional_block_attention_module_CBAM.ipynb
Fused-MBConv/: index.ipynb
GAN/: index.py
LSTM/: index.py
MBConv/: index.ipynb
MLFlow/: index.ipynb
PyTorch3D/: index.ipynb
PyTorch_training_template/: index.ipynb
SLAM/: losses_function.ipynb  photometric_reprojection_loss.ipynb
ab_testing/: index.ipynb
activation_functions/: index.ipynb
amp/: index.ipynb
auto_grad_package/: auto_grad.ipynb  dynamic_computational_graph.py  index.py  no_grad.py
backpropagation/: index.ipynb
batch_layer_instance_group_normalization/: batch_normalization.ipynb  group_normalization.ipynb  index.ipynb  instance_normalization.ipynb  layer_normalization.ipynb
batch_normalization/: index.ipynb
bias_variance_tradeoff_double_descent/: index.ipynb
cnn_architectures/: convnext.ipynb  densenet.ipynb  efficientnet.ipynb  inception.ipynb  regnet.ipynb  resnet.ipynb  vgg.ipynb
contrastive_learning/: index.ipynb
conv/: index.py  (+4 more)
projects/Lung_Disease_Dataset/: .dockerignore  .gitignore  README.md  RUNPOD_DEPLOYMENT.md  pyproject.toml  requirements.txt
projects/Lung_Disease_Dataset/configs/: README.md  data.yaml  eval.yaml  model.yaml  train.yaml  train_local.yaml  train_runpod.yaml
projects/Lung_Disease_Dataset/models/: model.py
projects/Lung_Disease_Dataset/notebooks/: kaggle.ipynb
projects/Lung_Disease_Dataset/scripts/: evaluate.py  evaluatelog.txt  test.py  testlog.txt  train.py
projects/Lung_Disease_Dataset/src/lung_disease_dataset/: __init__.py
projects/Lung_Disease_Dataset/src/lung_disease_dataset/core/: __init__.py  evaluation.py  training.py
projects/Lung_Disease_Dataset/src/lung_disease_dataset/models/: model.py
projects/Lung_Disease_Dataset/src/lung_disease_dataset/utils/: __init__.py  compute_normalization.py  normalization_constants.py  paths.py
projects/Lung_Disease_Dataset/src/lung_disease_dataset/utils/files_utility/: __init__.py  file_utils.py
utils/: pyproject.toml
utils/scripts/: verify_scripts.py
utils/test/: __init__.py  test_file_utils.py
utils/utility/: file_utils.py
(+434 files in other folders)
